package model.dungeon.entity;

public class Hero extends Entity {

    /**
     * Default constructor
     * @param hp health point
     */
    public Hero(int hp) {
        super(hp);
    }

    @Override
    public void draw() {

    }
}
