package model.dungeon.tile;

import model.dungeon.entity.Entity;

public class Tile extends TileFactory {

    /**
     * Default constructor
     */
    protected Tile(){

    }

    public void draw(){

    }

    public void action(Entity entity){

    }

    public boolean canBeCrossed(){
        return true;
    }

}
