package model.global;

public class GlobalSprites {

    /**
     * Getter for a sprite 8x8 pixels
     * @return the length of a sprite 8x8 pixels
     */
    public static int get8Sprite(){
        return 8;
    }

    /**
     * Getter for a sprite 16x16 pixels
     * @return the length of a sprite 8x8 pixels
     */
    public static int get16Sprite(){
        return 16;
    }
}
